whitespace fix

--- a/tcf_website/static/course/course_professor.css
+++ b/tcf_website/static/course/course_professor.css
@@ -7,7 +7,7 @@
 }
 
 .grades_container {
-    width: 50%;
+    width: 45%;
     height: 100%;
     flex-shrink: 1;
     display: flex;
